0x07-python-test_driven_development/tests/0-add_integer.txt
0-add_integer.txt
======================

How to Use 0-add_integer.py
---------------------------

This module defines an integer addition function ``add_integer(a, b=98)``.

Usage
~~~~

The ``add_integer(...)`` function returns the addition of its two arguments. For numbers, that value is equivalent to using the ``+`` operator.

.. code-block:: python

    >>> add_integer = __import__('0-add_integer').add_integer
    >>> add_integer(2, 3)
    5

.. code-block:: python

    >>> add_integer(2, -3)
    -1

The function also works with floating-point values.

.. code-block:: python

    >>> add_integer(2.0, 3.0)
    5

Note that floats are casted to ints before addition is performed.

.. code-block:: python

    >>> add_integer(2.9, 0.2)
    2

.. code-block:: python

    >>> add_integer(-2.9, -0.2)
    -2

Floating and non-floating point values can be combined.

.. code-block:: python

    >>> add_integer(2.3, -3)
    -1

The second argument is optional - by default, it is 98.

.. code-block:: python

    >>> add_integer(2)
    100

Non-Numbers
~~~~~~~~~~

``add_integer()`` expects that both arguments are either integers or floats. If either argument is a non-integer and non-float, a TypeError is raised.

.. code-block:: python

    >>> add_integer("hello", 3)
    Traceback (most recent call last):
        TypeError: a must be an integer

.. code-block:: python

    >>> add_integer(2, "hello")
    Traceback (most recent call last):
        TypeError: b must be an integer

.. code-block:: python

    >>> add_integer(None)
    Traceback (most recent call last):
        TypeError: a must be an integer

.. code-block:: python

    >>> add_integer(2.3, None)
    Traceback (most recent call last):
        TypeError: b must be an integer

If both arguments are non-integers and non-floats, a TypeError message is only printed for the first argument.

.. code-block:: python

    >>> add_integer("hello", "there")
    Traceback (most recent call last):
        TypeError: a must be an integer

The function will fail if infinity is provided.

.. code-block:: python

    >>> add_integer(float('inf'))
    Traceback (most recent call last):
        OverflowError: cannot convert float infinity to integer

.. code-block:: python

    >>> add_integer(2, float('inf'))
    Traceback (most recent call last):
        OverflowError: cannot convert float infinity to integer

And again with NaN numbers.

.. code-block:: python

    >>> add_integer(float('nan'))
    Traceback (most recent call last):
        ValueError: cannot convert float NaN to integer

.. code-block:: python

    >>> add_integer(2, float('nan'))
    Traceback (most recent call last):
        ValueError: cannot convert float NaN to integer
